[gd_scene load_steps=3 format=3 uid="uid://chmvhxmpav5pm"]

[ext_resource type="Script" uid="uid://cicyixdwclgmh" path="res://scripts/ui/Conversation.gd" id="1_nywg1"]
[ext_resource type="PackedScene" uid="uid://6or708qkchgm" path="res://scenes/ui/SpeechBubble.tscn" id="1_q61hu"]

[node name="Conversation" type="Node2D"]
script = ExtResource("1_nywg1")

[node name="SpeechBubble1" parent="." instance=ExtResource("1_q61hu")]

[node name="SpeechBubble2" parent="." instance=ExtResource("1_q61hu")]
offset_left = 114.0
offset_right = 189.0

[node name="Next Button" type="Button" parent="."]
offset_top = 49.0
offset_right = 45.0
offset_bottom = 80.0
text = "Next"

[connection signal="pressed" from="Next Button" to="." method="_on_next_button_pressed"]
